--- a/platformio.ini
+++ b/platformio.ini
@@ -11,3 +11,7 @@ board_upload.maximum_size = 33554432
 ; If you don't have this file yet, create a blank file named partitions.csv
 ; and I can give you the content for it.
 board_build.partitions = partitions.csv
+
+monitor_speed = 115200
+monitor_dtr = 1
+monitor_rts = 1
