--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
-.pio
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/ipch
+# Python
+__pycache__/
+*.py[cod]
+*.egg-info/
+.venv/
+venv/
+
+# PlatformIO
+EMG_Arm/.pio/
+EMG_Arm/.vscode/
+
+# Data (uncomment if you want to exclude)
+# collected_data/
+# models/
+
+# OS
+.DS_Store
+Thumbs.db
