--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,8 @@ venv/
 EMG_Arm/.pio/
 EMG_Arm/.vscode/
 
-# Data (uncomment if you want to exclude)
-# collected_data/
-# models/
+# Large data files (too big for GitHub)
+assets/*.hdf5
 
 # OS
 .DS_Store
