Restructure ESP32 firmware into layered architecture with serial streaming
Architecture changes:
- config/: Centralized pin definitions and settings
- hal/: Hardware abstraction layer (servo PWM control)
- drivers/: Device drivers (hand, emg_sensor)
- core/: Business logic (gestures)
- app/: Application entry point

New features:
- Fake EMG data streaming over USB serial at ~100 Hz
- FEATURE_FAKE_EMG flag to switch between fake/real sensors
- Python RealSerialStream class for receiving serial data

Data format: timestamp_ms,ch0,ch1,ch2,ch3

--- a/EMG_Arm/src/CMakeLists.txt
+++ b/EMG_Arm/src/CMakeLists.txt
@@ -1,6 +1,38 @@
-# This file was automatically generated for projects
-# without default 'CMakeLists.txt' file.
+# CMakeLists.txt for Bucky Arm EMG Robotic Hand
+#
+# Project structure:
+#   src/
+#   ├── config/     Configuration headers
+#   ├── hal/        Hardware Abstraction Layer
+#   ├── drivers/    Device drivers
+#   ├── core/       Core business logic
+#   └── app/        Application entry point
 
-FILE(GLOB_RECURSE app_sources ${CMAKE_SOURCE_DIR}/src/*.*)
+# Collect all source files from each layer
+set(HAL_SOURCES
+    hal/servo_hal.c
+)
 
-idf_component_register(SRCS ${app_sources})
+set(DRIVER_SOURCES
+    drivers/hand.c
+    drivers/emg_sensor.c
+)
+
+set(CORE_SOURCES
+    core/gestures.c
+)
+
+set(APP_SOURCES
+    app/main.c
+)
+
+# Register component with ESP-IDF
+idf_component_register(
+    SRCS
+        ${HAL_SOURCES}
+        ${DRIVER_SOURCES}
+        ${CORE_SOURCES}
+        ${APP_SOURCES}
+    INCLUDE_DIRS
+        .
+)
